<resources>
    <string name="app_name">Unit2TipCalculator</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing_service">Amazing (%20)</string>
    <string name="good_service">Good (%18)</string>
    <string name="okay_service">Okay (%15)</string>
    <string name="calculate">CALCULATE</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="tip_amount">Tip Amount: %s</string>
</resources>